--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <link href="/dist/output.css" rel="stylesheet" />
-    <title>Solid App</title>
+    <title>PNG Chunk Remover</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
